<resources>
    <string name="app_name">Mycounter</string>
    <string name="simple_calculator">简单计算器</string>
    <string name="delete">⬅</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="all_clear">AC</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="equal">=</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="emotion_title">情绪记录</string>
    <string name="emotion_happy">开心</string>
    <string name="emotion_sad">悲伤</string>
    <string name="emotion_anxious">焦虑</string>
    <string name="emotion_calm">平静</string>
    <string name="emotion_description_hint">请描述您的情绪...</string>
    <string name="emotion_save_button">保存</string>
    <string name="emotion_save_success">情绪记录已保存！</string>
    <string name="zero">0</string>
    <string name="sqrt">√</string>
    <string name="point">.</string>
    <string name="reciprocal">1/x</string>
</resources>